# python-fastapi-alembic-sql

./: .gitignore  README.md  pyproject.toml
app/: crud.py  database.py  main.py  models.py
migrations/: env.py
migrations/versions/: 1870f9c2051e_user_add_email_1_email_2.py  319cfa110371_merge_37c_187.py  37cddbf6b1c7_article_add_price.py  7dd0f66a2cd4_adding_user_and_article_table.py
