[tool.poetry]
name = "python-fastapi-alembic-sql"
version = "0.1.0"
description = ""
authors = ["prd-tan-truong <tan.truong@paradox.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
python-dotenv = "^0.20.0"
mysqlclient = "^2.1.1"
SQLAlchemy = "^1.4.40"
email-validator = "^1.2.1"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
